src/objects/Contract_Bundling_Discount__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Bundling Discounts</relationshipLabel>
        <relationshipName>Contract_Bundling_Discounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Apps__c</fullName>
        <label>No of Applications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Bundling Discount</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contract Bundling Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Bundling Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>